--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
         "clean": "rm -rf dist",
         "lint": "biome lint src/",
         "format": "biome format src/",
-        "typecheck": "tsc --noEmit"
+        "typecheck": "tsc --noEmit",
+        "release": "bun run scripts/release.js",
+        "release:patch": "bun run scripts/release.js patch",
+        "release:minor": "bun run scripts/release.js minor",
+        "release:major": "bun run scripts/release.js major",
+        "release:prerelease": "bun run scripts/release.js prerelease",
+        "release:dry-run": "bun run scripts/release.js patch --dry-run",
+        "release:skip-tests": "bun run scripts/release.js patch --skip-tests"
     },
     "keywords": [
         "service",
