--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@globetracker/service-control",
+    "name": "globetracker-service-control",
     "version": "1.0.0",
     "description": "Service control and lifecycle management for distributed services",
     "main": "dist/index.js",
@@ -20,7 +20,9 @@
         "release:major": "bun run scripts/release.js major",
         "release:prerelease": "bun run scripts/release.js prerelease",
         "release:dry-run": "bun run scripts/release.js patch --dry-run",
-        "release:skip-tests": "bun run scripts/release.js patch --skip-tests"
+        "release:skip-tests": "bun run scripts/release.js patch --skip-tests",
+        "publish:npm": "npm publish",
+        "publish:npm:dry-run": "npm publish --dry-run"
     },
     "keywords": [
         "service",
@@ -32,7 +34,6 @@
     ],
     "author": "Globetracker",
     "license": "MIT",
-    "private": true,
     "dependencies": {
         "@sinclair/typebox": "~0.32.35",
         "winston": "~3.14.1"
